# Vision-Based-Desktop-Automation-with-Dynamic-Icon-Grounding

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: api_client.py  automation_script.py  config.py  gui_automation.py
src/vision_based_desktop_automation.egg-info/: PKG-INFO
