# Create or update your pyproject.toml with explicit Pillow version
[project]
name = "vision-based-desktop-automation"
version = "0.1.0"
dependencies = [
    "Pillow>=10.0.0",  # Explicitly add Pillow
    "opencv-python>=4.5.0",
    "numpy>=1.19.0",
    "pyautogui>=0.9.53",
    "requests>=2.25.0",
    "pyperclip>=1.8.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# Then run with uv from your src directory
